[project]
name = "cloakllm-mcp"
version = "0.1.7"
description = "MCP server for CloakLLM — PII cloaking tools for Claude Desktop"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "The CloakLLM Authors", email = "cloakllm@gmail.com"}]
keywords = ["llm", "pii", "mcp", "claude", "privacy", "compliance"]
dependencies = [
    "cloakllm>=0.1.7",
    "mcp[cli]>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/cloakllm/cloakllm-mcp"
Repository = "https://github.com/cloakllm/cloakllm-mcp"
Issues = "https://github.com/cloakllm/cloakllm-mcp/issues"

[tool.setuptools]
py-modules = ["server"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
