[project]
name = "cloakllm-mcp"
version = "0.6.4"
description = "MCP server for CloakLLM — PII cloaking tools for Claude Desktop"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "The CloakLLM Authors", email = "cloakllm@gmail.com"}]
keywords = ["llm", "pii", "mcp", "claude", "privacy", "compliance"]
dependencies = [
    # v0.6.1 H6: cap upper to prevent unintended major-version pickup.
    # v0.6.2 (I1 hotfix): bump floor to ensure I1 fix is present.
    # v0.6.3: bump floor — v0.6.2 is missing the entire round of security
    # hardening (SSRF redirect bypass close, sanitized_hash oracle close,
    # streaming case-variant warning, MCP model/provider PII scan, audit
    # chain integrity typed exception, audit file 0o600 perms, etc.). MCP
    # installs MUST get the v0.6.3 cloakllm to inherit those fixes.
    "cloakllm>=0.6.4,<0.7.0",
    "mcp[cli]>=1.0.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/cloakllm/cloakllm-mcp"
Repository = "https://github.com/cloakllm/cloakllm-mcp"
Issues = "https://github.com/cloakllm/cloakllm-mcp/issues"

[tool.setuptools]
py-modules = ["server"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"